# cashflows

./: .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  views.py
accounts/tests/: test_forms.py  test_models.py  test_views.py
cfapp/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  tables.py  urls.py  views.py
cfapp/templates/cfapp/: base.html  incasso_delete.html  incasso_detail.html  incasso_edit.html  incasso_new.html  incasso_table.html
cfapp/tests/: test_filters.py  test_forms.py  test_models.py  test_tables.py  test_templates.py  test_urls.py  test_view.py
config/: settings.py  urls.py
templates/: base.html  home.html
templates/cfapp/: incasso_delete.html  incasso_detail.html  incasso_edit.html  incasso_new.html  incasso_table.html
templates/cfapp/incassi/: incasso_delete.html  incasso_detail.html  incasso_edit.html  incasso_table.html
templates/cfapp/transazioni/: transazione_delete.html  transazione_detail.html  transazione_edit.html  transazione_new.html  transazione_table.html
templates/registration/: signup.html
