[project]
name = "cashflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "crispy-bootstrap5==2024.2",
    "django-crispy-forms==2.3",
    "django-filter==24.3",
    "django-tables2==2.7.0",
    "django==5.1",
    "et-xmlfile==1.1.0",
    "openpyxl==3.1.5",
    "sqlparse==0.5.1",
    "tablib==3.6.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.9"]
allow-insecure-host = ["pypi.org", "files.pythonhosted.org"]
native-tls = true